# c-ship

./: CMakeLists.txt  Dockerfile.dev  docker-compose.yml  dockerfile.win-builder
cmake/: windows-toolchain.cmake
src/: main.cpp
